--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB_URL="postgres://ohxsobfl:H543KYManb2FQMpI7mOmil6nkb5Np9Lb@rain.db.elephantsql.com/ohxsobfl"
+DB_USER=ohxsobfl
+DB_PASSWORD=H543KYManb2FQMpI7mOmil6nkb5Np9Lb
+DB_NAME=ohxsobfl
